--- a/CSS Odevleri/Odev_1/index.html
+++ b/CSS Odevleri/Odev_1/index.html
@@ -1,131 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Solar System</title>
+  <title>Ana Sayfa</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
   <header>
-
-    <nav class="navbar">
-      <a href="index.html">Home</a>
-      <div class="dropdown">
-        <button class="dropbtn">Planets 
-        </button>
-        <div class="dropdown-content">
-          <a target="_blank" href="https://spaceplace.nasa.gov/all-about-mercury/en/">Mercury</a>
-          <a target="_blank" href="https://spaceplace.nasa.gov/all-about-venus/en/">Venus</a>
-          <a target="_blank" href="https://spaceplace.nasa.gov/all-about-earth/en/">Earth</a>
-          <a target="_blank" href="https://spaceplace.nasa.gov/all-about-mars/en/">Mars</a>
-          <a target="_blank" href="https://spaceplace.nasa.gov/all-about-jupiter/en/">Jupiter</a>
-          <a target="_blank" href="https://spaceplace.nasa.gov/all-about-saturn/en/">Saturn</a>
-          <a target="_blank" href="https://spaceplace.nasa.gov/all-about-uranus/en/">Uranus</a>
-          <a target="_blank" href="https://spaceplace.nasa.gov/all-about-neptune/en/">Neptune</a>
-        </div>
-      </div> 
-    </nav>
-
-    <h1>Learn Solar System Planets</h1>
-
-
+      <nav>
+        <h1> Müzik Dükkanım </h1>
+        <a href="index.html" style="margin-left: 41%;">Ana Sayfa</a>
+        <a href="Urunlerimiz.html">Ürünlerimiz</a>
+        <a href="Hakkımızda.html">Hakkımızda</a>
+      </nav>
   </header>
 
-  <br><br><br><br><br><br><br><br>
   
   <main>
 
-    <div class="responsive">
-      <div class="gallery marquee">
-        <a target="_blank" href="https://spaceplace.nasa.gov/all-about-mercury/en/">
-          <img src="img/Mercury.png" alt="Mercury">
-        </a>
-        <div class="desc">Mercury</div>
-      </div>
-    </div>
-  
-    <div class="responsive">
-      <div class="gallery marquee">
-        <a target="_blank" href="https://spaceplace.nasa.gov/all-about-venus/en/">
-          <img src="img/Venus.png" alt="Venus">
-        </a>
-        <div class="desc">Venus</div>
-      </div>
-    </div>
-  
-    <div class="responsive">
-      <div class="gallery marquee">
-        <a target="_blank" href="https://spaceplace.nasa.gov/all-about-earth/en/">
-          <img src="img/Earth.png" alt="Earth">
-        </a>
-        <div class="desc">Earth</div>
-      </div>
-    </div>
-  
-  
-    <div class="responsive">
-      <div class="gallery marquee ">
-        <a target="_blank" href="https://spaceplace.nasa.gov/all-about-mars/en/">
-          <img src="img/Mars.png" alt="Mars">
-        </a>
-        <div class="desc">Mars</div>
-      </div>
-    </div>
-  
-    <div class="responsive">
-      <div class="gallery marquee">
-        <a target="_blank" href="https://spaceplace.nasa.gov/all-about-jupiter/en/">
-          <img src="img/Jupiter.png" alt="Jupiter">
-        </a>
-        <div class="desc">Jupiter</div>
-      </div>
-    </div>
-  
-    <div class="responsive">
-      <div class="gallery marquee">
-        <a target="_blank" href="https://spaceplace.nasa.gov/all-about-saturn/en/">
-          <img src="img/Saturn.png" alt="Saturn">
-        </a>
-        <div class="desc">Saturn</div>
-      </div>
-    </div>
-  
-    <div class="responsive">
-      <div class="gallery marquee">
-        <a target="_blank" href="https://spaceplace.nasa.gov/all-about-uranus/en/">
-          <img src="img/Uranus.png" alt="Uranus">
-        </a>
-        <div class="desc">Uranus</div>
-      </div>
-    </div>
-  
-    <div class="responsive">
-      <div class="gallery marquee">
-        <a target="_blank" href="https://spaceplace.nasa.gov/all-about-neptune/en/">
-          <img src="img/Neptune.png" alt="Neptune">
-        </a>
-        <div class="desc">Neptune</div>
-      </div>
-    </div>
+    <h2 id="purple-h2"> Ana Sayfa </h2>
+    
+    <p style="text-align: center;"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ex nesciunt voluptatem sit perspiciatis iure labore natus quis? <a href="">Ürünlerimiz</a> Lorem, ipsum dolor.</p>
+
+    <p style="text-align: center; color: darksalmon;"><b>Lorem ipsum dolor sit.</b></p>
+    
+    <ul style="margin-left: 47% ;">
+      <li>Lorem.</li>
+      <li>Dolores.</li>
+      <li>Temporibus.</li>
+      <li>Esse!</li>
+    </ul>
 
   </main>
-  
-  <br><br><br><br><br><br><br><br><br>
-
-  <footer>
-    <nav>
-      <a href="contact.html" target="_blank"><p>contact with us</p></a>
-    </nav>
-  </footer>
-
-  
-
-
 
 </body>
-
 </html>
