--- a/CSS Odevleri/Odev_1/index.html
+++ b/CSS Odevleri/Odev_1/index.html
@@ -25,7 +25,7 @@
 
     <h2 id="purple-h2"> Ana Sayfa </h2>
     
-    <p style="text-align: center;"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ex nesciunt voluptatem sit perspiciatis iure labore natus quis? <a href="">Ürünlerimiz</a> Lorem, ipsum dolor.</p>
+    <p style="text-align: center;"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ex nesciunt voluptatem sit perspiciatis iure labore natus quis? <a href="Hakkımızda.html">Ürünlerimiz</a> Lorem, ipsum dolor.</p>
 
     <p style="text-align: center; color: darksalmon;"><b>Lorem ipsum dolor sit.</b></p>
     
